--- a/app/src/main/res/layout/profile_list_activity.xml
+++ b/app/src/main/res/layout/profile_list_activity.xml
@@ -10,6 +10,7 @@
     </data>
 
     <ListView
+        android:id="@+id/profile_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:items="@{profiles}"
