ProfileService: Use a map to store profile data
This has no visible changes at the moment, but will allow most functions
to pass around strings instead of Profile objects, obviating the need to
implement serialization for them. It also trades some naive linear
searches for the binary search in SimpleArrayMap.

Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/res/layout/profile_list_fragment.xml
+++ b/app/src/main/res/layout/profile_list_fragment.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="profiles"
-            type="android.databinding.ObservableList&lt;com.wireguard.config.Profile&gt;" />
+            type="android.databinding.ObservableArrayMap&lt;String, com.wireguard.config.Profile&gt;" />
     </data>
 
     <ListView
