--- a/app/src/main/res/layout/profile_list_fragment.xml
+++ b/app/src/main/res/layout/profile_list_fragment.xml
@@ -4,6 +4,7 @@
 
     <data>
 
+        <!--suppress AndroidDomInspection -->
         <variable
             name="profiles"
             type="android.databinding.ObservableArrayMap&lt;String, com.wireguard.config.Profile&gt;" />
