ProfileList: Add the list fragment in code so it knows the layout

--- a/app/src/main/res/layout/profile_list_activity.xml
+++ b/app/src/main/res/layout/profile_list_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    android:name="com.wireguard.android.ProfileListFragment"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/list_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:tag="list" />
+    android:layout_height="match_parent" />
