--- a/app/src/main/res/layout-land/profile_list_activity.xml
+++ b/app/src/main/res/layout-land/profile_list_activity.xml
@@ -5,12 +5,11 @@
     android:baselineAligned="false"
     android:orientation="horizontal">
 
-    <fragment
-        android:name="com.wireguard.android.ProfileListFragment"
+    <FrameLayout
+        android:id="@+id/list_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:tag="list" />
+        android:layout_weight="1" />
 
     <FrameLayout
         android:id="@+id/fragment_container"
