--- a/app/src/main/res/layout/profile_list_item.xml
+++ b/app/src/main/res/layout/profile_list_item.xml
@@ -11,6 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?android:attr/activatedBackgroundIndicator"
         android:padding="16dp">
 
         <TextView
