ProfileActivity: Do menus correctly

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/menu_settings"
         android:alphabeticShortcut="s"
         android:icon="@drawable/ic_settings"
-        android:onClick="onMenuSettings"
         android:showAsAction="never"
-        android:title="@string/settings"/>
+        android:title="@string/settings" />
 </menu>
