--- a/app/src/main/res/menu/profile_detail.xml
+++ b/app/src/main/res/menu/profile_detail.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/menu_action_edit"
         android:alphabeticShortcut="e"
         android:icon="@drawable/ic_action_edit"
-        android:onClick="onMenuEdit"
         android:showAsAction="always"
         android:title="@string/edit" />
 </menu>
