--- a/app/src/main/res/menu/profile_edit.xml
+++ b/app/src/main/res/menu/profile_edit.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/menu_action_save"
         android:alphabeticShortcut="s"
         android:icon="@drawable/ic_action_save"
-        android:onClick="onMenuSave"
         android:showAsAction="always"
         android:title="@string/save" />
 </menu>
