Major renaming and refactoring in activity and service
Apparently "configuration" is the proper term, not "profile".

--- a/app/src/main/res/layout-land/config_activity.xml
+++ b/app/src/main/res/layout-land/config_activity.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
     android:orientation="horizontal">
 
     <FrameLayout
-        android:id="@+id/list_container"
+        android:id="@+id/master_fragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
 
     <FrameLayout
-        android:id="@+id/fragment_container"
+        android:id="@+id/detail_fragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2" />
+        android:layout_weight="2"
+        tools:ignore="InconsistentLayout" />
 </LinearLayout>
