--- a/app/src/main/res/layout-land/config_activity.xml
+++ b/app/src/main/res/layout-land/config_activity.xml
@@ -17,5 +17,8 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
+        android:background="?android:attr/colorPrimary"
+        android:paddingEnd="0dp"
+        android:paddingStart="4dp"
         tools:ignore="InconsistentLayout" />
 </LinearLayout>
