--- a/app/src/main/res/layout/config_detail_fragment.xml
+++ b/app/src/main/res/layout/config_detail_fragment.xml
@@ -10,7 +10,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="?android:attr/colorBackground">
 
         <RelativeLayout
             android:layout_width="match_parent"
