--- a/app/src/main/res/layout/config_detail_fragment.xml
+++ b/app/src/main/res/layout/config_detail_fragment.xml
@@ -19,26 +19,25 @@
             android:padding="16dp">
 
             <TextView
-                android:id="@+id/config_name_label"
+                android:id="@+id/status_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:labelFor="@+id/config_name_text"
-                android:text="@string/config_name" />
+                android:text="@string/status" />
 
             <TextView
-                android:id="@+id/config_name_text"
+                android:id="@+id/status_text"
                 style="?android:attr/textAppearanceMedium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/config_name_label"
-                android:text="@{config.name}" />
+                android:layout_below="@+id/status_label"
+                android:text="@{config.enabled ? @string/enabled : @string/disabled}" />
 
             <TextView
                 android:id="@+id/public_key_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/config_name_text"
+                android:layout_below="@id/status_text"
                 android:labelFor="@+id/public_key_text"
                 android:text="@string/public_key" />
 
@@ -51,12 +50,6 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="@{config.interface.publicKey}" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/public_key_text"
-                android:text="@{config.toString()}" />
         </RelativeLayout>
     </ScrollView>
 </layout>
