--- a/app/src/main/res/layout/config_detail_fragment.xml
+++ b/app/src/main/res/layout/config_detail_fragment.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -13,43 +15,72 @@
         android:layout_height="match_parent"
         android:background="?android:attr/colorBackground">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/status_label"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:text="@string/status" />
+                android:layout_marginBottom="4dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:background="?android:attr/colorBackground"
+                android:elevation="2dp"
+                android:padding="8dp">
 
-            <TextView
-                android:id="@+id/status_text"
-                style="?android:attr/textAppearanceMedium"
+                <TextView
+                    android:id="@+id/status_label"
+                    style="?android:attr/textAppearanceMedium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginBottom="8dp"
+                    android:text="@string/status" />
+
+                <TextView
+                    android:id="@+id/status_text"
+                    style="?android:attr/textAppearanceMedium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/status_label"
+                    android:layout_alignParentEnd="true"
+                    android:layout_toEndOf="@+id/status_label"
+                    android:gravity="end"
+                    android:text="@{config.enabled ? @string/enabled : @string/disabled}"
+                    android:textColor="@{config.enabled ? @android:color/holo_green_dark : @android:color/holo_red_dark}" />
+
+                <TextView
+                    android:id="@+id/public_key_label"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/status_label"
+                    android:labelFor="@+id/public_key_text"
+                    android:text="@string/public_key" />
+
+                <TextView
+                    android:id="@+id/public_key_text"
+                    style="?android:attr/textAppearanceMedium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/public_key_label"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="@{config.interface.publicKey}" />
+            </RelativeLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/status_label"
-                android:text="@{config.enabled ? @string/enabled : @string/disabled}" />
-
-            <TextView
-                android:id="@+id/public_key_label"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/status_text"
-                android:labelFor="@+id/public_key_text"
-                android:text="@string/public_key" />
-
-            <TextView
-                android:id="@+id/public_key_text"
-                style="?android:attr/textAppearanceMedium"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/public_key_label"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="@{config.interface.publicKey}" />
-        </RelativeLayout>
+                android:layout_marginBottom="4dp"
+                android:divider="@null"
+                android:orientation="vertical"
+                app:items="@{config.peers}"
+                app:layout="@{@layout/config_detail_peer}"
+                tools:ignore="UselessLeaf" />
+        </LinearLayout>
     </ScrollView>
 </layout>
