ConfigEditFragment: Mark the persistent keepalive as optional
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/res/layout/config_edit_peer.xml
+++ b/app/src/main/res/layout/config_edit_peer.xml
@@ -130,6 +130,7 @@
             android:layout_alignBaseline="@+id/endpoint_text"
             android:layout_alignParentEnd="true"
             android:layout_alignStart="@+id/persistent_keepalive_label"
+            android:hint="@string/hint_optional"
             android:inputType="number"
             android:text="@={item.persistentKeepalive}"
             android:textAlignment="center" />
