Bindings: Move to a separate package
These are really app-independent reusable classes. Moving them to a
separate package helps avoid polluting the main app package, and makes
them easier to upgrade.

Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/res/layout/config_list_fragment.xml
+++ b/app/src/main/res/layout/config_list_fragment.xml
@@ -7,7 +7,7 @@
         <!--suppress AndroidDomInspection -->
         <variable
             name="configs"
-            type="com.wireguard.android.ObservableSortedMap&lt;String, com.wireguard.config.Config&gt;" />
+            type="com.wireguard.android.bindings.ObservableSortedMap&lt;String, com.wireguard.config.Config&gt;" />
     </data>
 
     <ListView
