ConfigActivity: Add import menu item
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/res/menu/config_list.xml
+++ b/app/src/main/res/menu/config_list.xml
@@ -6,4 +6,10 @@
         android:icon="@drawable/ic_action_add"
         android:showAsAction="always"
         android:title="@string/add" />
+    <item
+        android:id="@+id/menu_action_import"
+        android:alphabeticShortcut="o"
+        android:icon="@drawable/ic_open"
+        android:showAsAction="ifRoom"
+        android:title="@string/import_config" />
 </menu>
