VpnService: Move it to a backends package
It should be split into two pieces: configuration file management
(loading/saving/renaming/deleting) and calling into wg-quick via
RootShell. The configuration file management part should then go
back into the main package. This is in preparation for adding
additional backends based on wg(8) and wireguard-go.

--- a/app/src/main/res/layout/config_list_item.xml
+++ b/app/src/main/res/layout/config_list_item.xml
@@ -5,7 +5,7 @@
 
         <import type="android.graphics.Typeface" />
 
-        <import type="com.wireguard.android.VpnService" />
+        <import type="com.wireguard.android.backends.VpnService" />
 
         <variable
             name="key"
