--- a/app/src/main/res/layout/not_supported_activity.xml
+++ b/app/src/main/res/layout/not_supported_activity.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/not_supported_message"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="32dp" />
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/not_supported_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="32dp" />
+    </ScrollView>
 </layout>
