Open: better icon

--- a/app/src/main/res/menu/config_list.xml
+++ b/app/src/main/res/menu/config_list.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/menu_action_import"
         android:alphabeticShortcut="o"
-        android:icon="@drawable/ic_open"
+        android:icon="@drawable/ic_action_open"
         android:showAsAction="ifRoom"
         android:title="@string/import_config" />
 </menu>
