EditFragment: do not autocomplete or capitalize ifnames
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/res/layout/config_edit_fragment.xml
+++ b/app/src/main/res/layout/config_edit_fragment.xml
@@ -58,7 +58,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/interface_name_label"
-                    android:inputType="textCapWords"
+                    android:inputType="textNoSuggestions"
                     android:text="@={config.name}"
                     app:filter="@{NameInputFilter.newInstance()}" />
 
