--- a/app/src/main/res/layout/config_detail_fragment.xml
+++ b/app/src/main/res/layout/config_detail_fragment.xml
@@ -44,7 +44,7 @@
                     android:layout_toStartOf="@+id/config_switch"
                     android:text="@string/status" />
 
-                <com.wireguard.android.widgets.ToggleSwitch
+                <com.wireguard.android.widget.ToggleSwitch
                     android:id="@+id/config_switch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
