--- a/app/src/main/res/layout/config_list_item.xml
+++ b/app/src/main/res/layout/config_list_item.xml
@@ -36,7 +36,7 @@
             android:text="@{key}"
             android:textStyle="@{item.primary ? Typeface.DEFAULT_BOLD : Typeface.DEFAULT}" />
 
-        <com.wireguard.android.widgets.ToggleSwitch
+        <com.wireguard.android.widget.ToggleSwitch
             android:id="@+id/config_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
