Convert the list of tunnels to a KeyedObservableList
Signed-off-by: Samuel Holland <samuel@sholland.org>

--- a/app/src/main/res/layout/tunnel_list_fragment.xml
+++ b/app/src/main/res/layout/tunnel_list_fragment.xml
@@ -4,13 +4,15 @@
 
     <data>
 
+        <import type="com.wireguard.android.model.Tunnel" />
+
         <variable
             name="fragment"
             type="com.wireguard.android.fragment.TunnelListFragment" />
 
         <variable
             name="tunnels"
-            type="com.wireguard.android.model.TunnelCollection" />
+            type="com.wireguard.android.util.KeyedObservableList&lt;String, Tunnel&gt;" />
     </data>
 
     <com.commonsware.cwac.crossport.design.widget.CoordinatorLayout
