--- a/app/src/main/res/layout/tunnel_list_item.xml
+++ b/app/src/main/res/layout/tunnel_list_item.xml
@@ -4,11 +4,13 @@
 
     <data>
 
+        <import type="com.wireguard.android.model.Tunnel" />
+
         <import type="com.wireguard.android.model.Tunnel.State" />
 
         <variable
             name="collection"
-            type="com.wireguard.android.model.TunnelCollection" />
+            type="com.wireguard.android.util.KeyedObservableList&lt;String, Tunnel&gt;" />
 
         <variable
             name="key"
