Keyed...: Rename all the things
Hooray for diamond interface inheritance.

Signed-off-by: Samuel Holland <samuel@sholland.org>

--- a/app/src/main/res/layout/tunnel_list_fragment.xml
+++ b/app/src/main/res/layout/tunnel_list_fragment.xml
@@ -12,7 +12,7 @@
 
         <variable
             name="tunnels"
-            type="com.wireguard.android.util.KeyedObservableList&lt;String, Tunnel&gt;" />
+            type="com.wireguard.android.util.ObservableKeyedList&lt;String, Tunnel&gt;" />
     </data>
 
     <com.commonsware.cwac.crossport.design.widget.CoordinatorLayout
