--- a/app/src/main/res/layout/tunnel_list_item.xml
+++ b/app/src/main/res/layout/tunnel_list_item.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="collection"
-            type="com.wireguard.android.util.KeyedObservableList&lt;String, Tunnel&gt;" />
+            type="com.wireguard.android.util.ObservableKeyedList&lt;String, Tunnel&gt;" />
 
         <variable
             name="key"
